# toyos

./: .gitignore  Cargo.toml  Makefile.toml  README.md
.cargo/: config.toml
.devcontainer/: Dockerfile  devcontainer.json
misc/: runner.sh
os/: Cargo.toml  Makefile.toml  build.rs
os/.cargo/: config.toml
os/src/: batch.rs  config.rs  console.rs  lang.rs  lib.rs  link_app.rs  loader.rs  logging.rs  main.rs  sbi.rs  stack_trace.rs  timer.rs
os/src/syscall/: fs.rs  mod.rs  process.rs
os/src/task/: context.rs  mod.rs  task.rs
os/src/trap/: context.rs  mod.rs
src/: lang_items.rs  logging.rs  main.rs
user/: Cargo.toml  Makefile.toml  ipdb.wasm  rustfmt.toml
user/.cargo/: config.toml
user/achived/: hello.wasm  wasm_hello.rs
user/src/: lib.rs  syscall.rs
