[package]
name = "user_lib"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
riscv = "0.7.0"
wasmi = {version = "0.11.0",default-features = false}
buddy_system_allocator = "*"

[profile.release]
lto = "fat"
codegen-units = 1